Update .gitignore to ignore credentials and keys
Add Streamlit credentials and broaden ignored secret formats: ignore .streamlit/credentials.toml, all .env.* files (while un-ignoring .env.example), and common private key extensions (*.pem, *.key, *.p12, *.pfx). Keep explicit ignores for client_secret.json and service_account.json. Also normalize the .vscode entry (newline fix).

--- a/.gitignore
+++ b/.gitignore
@@ -10,15 +10,22 @@ build/
 
 # --- Streamlit ---
 .streamlit/secrets.toml
+.streamlit/credentials.toml
 
 
 # --- Variables de Entorno y Secretos ---
 .env
 .env.local
+.env.*
+!.env.example
 *.json
 # Excepción: si usas service accounts de google, ignora los JSONs de claves
 client_secret.json
 service_account.json
+*.pem
+*.key
+*.p12
+*.pfx
 
 # --- Archivos generados por la App (Paper-to-Podcast) ---
 *.mp3
